objects/datamask__DM_Object_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>datamask__API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Feed_History_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed History Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Field_History_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field History Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Parent_Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Run_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run Log</label>
        <referenceTo>datamask__Masking_Execution_Log__c</referenceTo>
        <relationshipName>Object_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>datamask__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object Metadata</label>
    <listViews>
        <fullName>datamask__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>